# rinha-2025

./: Cargo copy.toml  Cargo.toml  Dockerfile  Dockerfile.worker  README.md  docker-compose.yml  example_payments.txt  example_summary.txt  haproxy.cfg  reference.rs
.cargo/: config.toml
.github/workflows/: ci-cd.yml
rinha-test/: partial-results.json  rinha.js
src/: db_init.rs  db_pool.rs  health_check.rs  http_handler.rs  main.rs  memory_store.rs  models.rs  payment_processor.rs  redis_pool.rs  server.rs  stats.rs  tcp.rs  test_db_pool.rs  test_worker.rs  worker.rs  worker_coroutines_tests.rs
tests/: debug_server.py  partial-results.json  report.html  rinha.js  shell_variables.sh
