[package]
name = "rust_coroutines_rinha_2025"
version = "3.1.0"
edition = "2024"

[dependencies]
mimalloc = { version = "0.1", default-features = false }

may = { version = "0.3", default-features = false, features = ["io_timeout"] }

[profile.release]
opt-level = 3
codegen-units = 1
panic = 'abort'
lto = 'fat'
debug = false
incremental = false

[profile.release.build-override]
opt-level = 3

[profile.release.package."*"]
opt-level = 3
codegen-units = 1
