[package]
name = "rust_coroutines_rinha_2025"
version = "4.0.0"
edition = "2024"

[dependencies]
chrono = "0.4.41"
dashmap = { version = "6.1.0", features = ["inline"] }
mimalloc = { version = "0.1", default-features = false }
reqwest = { version = "0.12.23", default-features = false }
tokio = { version = "1.47.1", default-features = false }

tokio-uring = { git = "https://github.com/not4rt/tokio-uring", rev = "eb08a96" }


[profile.release]
opt-level = 3
codegen-units = 1
panic = 'abort'
lto = 'fat'
debug = false
incremental = false
overflow-checks = false
strip = "debuginfo"

[profile.release.build-override]
opt-level = 3

[profile.release.package."*"]
opt-level = 3
codegen-units = 1
